--- a/time-vault/static/index.html
+++ b/time-vault/static/index.html
@@ -6,6 +6,7 @@
     <title>TimeVault</title>
   </head>
   <body>
+    <script src="/assets/js/angular.min.js"></script>
     <script src="/assets/js/app.min.js"></script>
   </body>
 </html>
