--- a/time-vault/angular/app/index.html
+++ b/time-vault/angular/app/index.html
@@ -23,9 +23,8 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li class="active"><a ng-href="#">Home</a></li>
-          <li><a ng-href="#/about">About</a></li>
-          <li><a ng-href="#">Contact</a></li>
+          <li class="active"><a href="/">Home</a></li>
+          <li><a href="/about">About</a></li>
         </ul>
         <h3 class="text-muted">timevault</h3>
       </div>
@@ -85,6 +84,8 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/pomodoros.js"></script>
+        <script src="scripts/services/pomodoro.js"></script>
         <!-- endbuild -->
 </body>
 </html>
