--- a/time-vault/angular/app/index.html
+++ b/time-vault/angular/app/index.html
@@ -86,6 +86,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/pomodoros.js"></script>
         <script src="scripts/services/pomodoro.js"></script>
+        <script src="scripts/controllers/notfound.js"></script>
         <!-- endbuild -->
 </body>
 </html>
